# DicewarePlayer

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  Dice.cppm  Diceware.cppm  WordList.cppm  main.cpp
tests/: CMakeLists.txt  DiceTest.cpp  DicewareTest.cpp
